// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DCEL broad-phase byte-identity (#439) > 'sine-flat 3x3 none' produces identical geometry 1`] = `
{
  "count": 9,
  "digest": "78385d4d",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'sine-flat 6x6 none' produces identical geometry 1`] = `
{
  "count": 36,
  "digest": "67203d88",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'sine-flat 8x6 classic' produces identical geometry 1`] = `
{
  "count": 48,
  "digest": "ddfba566",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'triangular r6 j0 none' produces identical geometry 1`] = `
{
  "count": 90,
  "digest": "ca21c564",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'triangular r6 j0.2 classic' produces identical geometry 1`] = `
{
  "count": 90,
  "digest": "10de7b59",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'triangular r8 j0.3 none' produces identical geometry 1`] = `
{
  "count": 168,
  "digest": "9aa52da2",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'venn classic' produces identical geometry 1`] = `
{
  "count": 4,
  "digest": "75147b4e",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'venn none' produces identical geometry 1`] = `
{
  "count": 4,
  "digest": "5307d17f",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'wavy 4x4 none' produces identical geometry 1`] = `
{
  "count": 16,
  "digest": "4b9d79b6",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'wavy 5x5 classic' produces identical geometry 1`] = `
{
  "count": 25,
  "digest": "789ef54d",
}
`;

exports[`DCEL broad-phase byte-identity (#439) > 'wavy 6x5 none' produces identical geometry 1`] = `
{
  "count": 30,
  "digest": "8aa6b86d",
}
`;
